--- a/src/app/components/digital-payment-solution/digital-payment-solution.component.html
+++ b/src/app/components/digital-payment-solution/digital-payment-solution.component.html
@@ -20,7 +20,7 @@
   <section class="container flex flex-col-reverse w-full gap-4 px-6 mx-auto lg:px-20 cta md:flex-row">
     <div class="flex flex-col items-center justify-center space-y-4 lg:w-1/2">
       <h2 class="text-2xl font-semibold text-primary">Etes vous prêt a transformer votre entreprise?</h2>
-      <p class="mt-4 text-lg text-gray-600">
+      <p class="items-start w-full mt-4 text-lg text-gray-600 text-start">
         Avec <strong>NGOMBE SARL</strong> ouvrez la porte à de nouvelle opportunités  et faites passer votre entreprise au niveau superieur.      
       </p>
       <button class="px-6 py-4 text-white rounded-full shadow-md bg-sky-500 hover:bg-sky-600">
