--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -16,7 +16,9 @@
 <div>
     <app-our-services></app-our-services>
 </div>
-
+<div>
+    <app-partners></app-partners>
+</div>
 <div>
     <app-about-us></app-about-us>
 </div>
@@ -27,7 +29,4 @@
 <div id="services">
     <!-- <app-our-services></app-our-services> -->
 </div>
-<div id="partners">
-    <app-partners></app-partners>
-</div>
-<app-contact></app-contact>
+<!-- <app-contact></app-contact> -->
