--- a/src/app/components/partners/partners.component.html
+++ b/src/app/components/partners/partners.component.html
@@ -71,9 +71,9 @@
               <img 
                 [src]="partner.logo" 
                 [alt]="partner.name" 
-                class="mx-auto mb-2 transition duration-300 shadow-lg h-14 hover:scale-105"
+                class="h-16 mx-auto transition duration-300 shadow-lg hover:scale-105"
               >
-              <p class="font-semibold text-gray-600 text-md">{{ partner.name }}</p>
+              <!-- <p class="font-semibold text-gray-600 text-md">{{ partner.name }}</p> -->
             </div>
           }
         </div>
