--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -1,42 +1,51 @@
-<div class="md:container md:mx-auto md:p-6 bg-gray-50 min-h-screen">
+<div class="min-h-screen">
 <!-- Conditional rendering -->
   @if(service){
-    <div  class="pt-28 md:pt-0">
-    <!-- Title Section -->
-      <div class="text-center mb-6">
-        <h1 class="text-5xl font-extrabold text-gray-900 mb-4">{{ service.title }}</h1>
-        <p class="text-lg text-gray-600">Explorez les details de services que nous proposons</p>
-      </div>
 
-      <!-- Image Section -->
-      <div class="mb-6 w-full h-[30vh] md:h-[70vh] relative overflow-hidden">
-        <div class="absolute peer top-0 left-0 w-full h-full z-30 opacity-50 bg-gradient-to-r from-gray-500 via-gray-700 to-gray-900 text-white p-8 md:rounded-lg shadow-lg "></div>
-        <img 
-          [src]="service.image" 
-          [alt]="service.title" 
-          class="absolute peer-hover:scale-125 w-full h-full object-cover top-0 left-0 md:rounded-lg shadow-lg border-2 border-gray-200 hover:border-gray-300 transition duration-900 "
-        >
-      </div>
+    <div class="py-8 bg-white md:py-12">
+      <div class="flex flex-col w-full">
+        <div class="mb-6 text-center md:mb-8">
+          <h2 class="mb-2 text-2xl font-bold md:text-4xl text-primary">
+            {{service.title}}
+          </h2>
+          <p class="text-sm text-gray-600 md:text-base">
+            Explorez les détails de services que nous proposons
+          </p>
+        </div>
 
-      <!-- Details Section -->
-      <div class="p-6 bg-white shadow-md md:rounded-lg">
-        <h2 class="text-3xl font-semibold text-gray-800 mb-4">Service Details</h2>
-        <p class="text-gray-700 my-4">{{service.description}}</p>
-        <ul class="list-disc pl-6 text-lg text-gray-700 space-y-2">
-          <li *ngFor="let item of service.items">
-            {{ item }}
-          </li>
-        </ul>
+        <div class="mb-6 overflow-hidden rounded-md shadow-md md:mb-8">
+          <img
+            [src]=service.image
+            alt="Construction Workers"
+            class="w-full rounded-xl h-auto md:min-h-[400px]"
+            style="max-height: 400px; object-fit: cover;"
+          />
+        </div>
+
+        <div class="flex flex-col items-start px-12 mx-auto mb-6 md:mb-8">
+          <h3 class="w-full mb-3 text-4xl font-semibold text-center text-gray-800">Service Details</h3>
+          <p class="mb-4 text-sm text-gray-700 md:text-base">
+           {{service.description}}
+          </p>
+          <ul class="pl-6 space-y-2 text-lg text-gray-700 list-disc">
+            
+            @for(item of service.items; track item )
+            {
+              <li>
+              {{ item }}
+            </li>}
+          </ul>
+        </div>
       </div>
     </div>
   }
 
   <!-- Fallback Content if 'service' is not available -->
   @if(!service){
-    <div  class="text-center text-gray-500 text-lg mt-12">
+    <div  class="mt-12 text-lg text-center text-gray-500">
       <p>No service selected. Please go back to browse available services.</p>
       <button 
-        class="mt-4 px-4 py-2 bg-gray-200 text-gray-700 font-medium rounded-lg hover:bg-gray-300 transition duration-300"
+        class="px-4 py-2 mt-4 font-medium text-gray-700 transition duration-300 bg-gray-200 rounded-lg hover:bg-gray-300"
         [routerLink]="['/']"
       >
         Back to Services
