--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="flex flex-col items-center justify-center py-8 text-white bg-primary md:py-16">
     <div class="mb-4">
       <div class="flex justify-center">
-        <div class="flex items-center justify-center w-12 h-12 text-xl font-bold bg-white rounded-full text-primary">
+        <div class="flex items-center justify-center text-xl font-bold bg-white w-14 h-14 text-primary">
             <img src="logos/ngombe.jpg" alt="Ngombe SARL" class="h-12 mx-auto mb-4">
         </div>
       </div>
