--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,28 +5,21 @@
 <div id="home">
     <app-hero></app-hero>
 </div>
-<div>
+<div id="ingenierie" class="py-4 fade-in" appAnimateOnScroll animationClass="fade-in" [triggerOnce]="false" [threshold]="0.5">
     <app-process-ingineering></app-process-ingineering>
 </div>
+   
+<div id="produits" class="py-4 fade-in" appAnimateOnScroll animationClass="fade-in" [triggerOnce]="false" [threshold]="0">
     <app-sirh-ngombe></app-sirh-ngombe>
     <app-features></app-features>
-<div>
     <app-digital-payment-solution></app-digital-payment-solution>
 </div>
-<div>
+<div id="services">
     <app-our-services></app-our-services>
 </div>
-<div>
+<div id="partners">
     <app-partners></app-partners>
 </div>
 <div>
     <app-about-us></app-about-us>
 </div>
-<!-- <div id="cvtheque">
-    <app-comming-soon></app-comming-soon>
-</div> -->
-
-<div id="services">
-    <!-- <app-our-services></app-our-services> -->
-</div>
-<!-- <app-contact></app-contact> -->
