--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -16,31 +16,40 @@
 </div>
 
  -->
-<section class="py-16 ">
+
+ 
+  <section class="py-16 fade-in"
+    appAnimateOnScroll animationClass="fade-in">
     <div class="container mx-auto md:px-6">
-      <h2 class="mb-12 text-3xl font-bold text-start text-primary">Nos Services</h2>
-      <!-- <p class="mb-16 text-center text-gray-600">
-        Toutes les opérations commerciales, industrielles et financières rattachées directement ou indirectement à notre expertise multisectorielle.
-      </p> -->
+      <h2 
+        class="mb-12 text-3xl font-bold text-start text-primary slide-down"
+        appAnimateOnScroll animationClass="slide-down"
+        [delay]="100">Nos Services
+      </h2>
+              <!-- <p class="mb-16 text-center text-gray-600">
+          Toutes les opérations commerciales, industrielles et financières rattachées directement ou indirectement à notre expertise multisectorielle.
+        </p> -->
+
       <div class="container flex flex-wrap justify-center gap-8">
-       @for(service of services; track service.id) {
-          <div class="max-w-sm p-6 transition rounded-xl hover:shadow-2xl hover:-translate-y-2">
-              <div class="mb-2 overflow-hidden rounded-xl group">
-                <img loading="lazy" [src]="service.image" alt="" class="transition-transform duration-300 rounded-xl group-hover:scale-105">
-              </div>
-              <div class="flex mb-4">
-                <h3 class="ml-4 text-xl font-bold text-gray-800">{{ service.title }}</h3>
-              </div>
-              <ul class="text-gray-600 space-y-2 min-h-[110px]">
-              @for(item of service.items; track item){<li>- {{ item }}</li>}
-              </ul>
-              <a [routerLink]="['/service',service.id]" class="flex items-center gap-2 p-2 text-primary hover:underline">
-                <span>Voir plus</span>
-                <fa-icon [icon]="faArrowRight"></fa-icon>
-              </a>
-          </div>
-       }
+      @for(service of services; track service.id) {
+        <div class="max-w-sm p-6 transition rounded-xl hover:shadow-2xl hover:-translate-y-2 zoom-in-item"
+              appAnimateOnScroll animationClass="zoom-in-item"
+              [delay]="200 + (service.id * 150)">
+            <div class="mb-2 overflow-hidden rounded-xl group">
+              <img loading="lazy" [src]="service.image" alt="" class="transition-transform duration-300 rounded-xl group-hover:scale-105">
+            </div>
+            <div class="flex mb-4">
+              <h3 class="ml-4 text-xl font-bold text-gray-800">{{ service.title }}</h3>
+            </div>
+            <ul class="text-gray-600 space-y-2 min-h-[110px]">
+            @for(item of service.items; track item){<li class="fade-in-item" appAnimateOnScroll animationClass="fade-in-item" [delay]="400 + (service.id * 150) + ($index * 50)">- {{ item }}</li>}
+            </ul>
+            <a [routerLink]="['/service',service.id]" class="flex items-center gap-2 p-2 text-primary hover:underline">
+              <span>Voir plus</span>
+              <fa-icon [icon]="faArrowRight"></fa-icon>
+            </a>
+        </div>
+      }
       </div>
     </div>
   </section>
-  
