--- a/src/app/components/process-ingineering/process-ingineering.component.html
+++ b/src/app/components/process-ingineering/process-ingineering.component.html
@@ -22,7 +22,7 @@
     </div> -->
 
     <div #scrollableContainer class="w-full p-4 scrollable-container">
-      <div class="flex items-center justify-start gap-2 flex-nowrap">
+      <div class="flex items-stretch justify-start gap-2 flex-nowrap">
         @for(process of processingSteps; track process.id) {
           <div class="relative flex flex-col flex-shrink-0 max-w-sm p-10 transition border-t rounded-md shadow-md duration-5 border-thin 00 border-primary hover:scale-105">
             <span class="absolute flex items-center justify-center w-10 h-10 p-4 text-center text-white rounded-full -top-4 left-1/2" [class]="process.bgClass">
